outputs_20260327-100811-604a7749/codegen/production/build_logs/compiler_stderr.log
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_hjclz5se\src\egtm_atom_3_phase_inverter_pwm.c: In function 'initEgtmAtom3phInv':
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_hjclz5se\src\egtm_atom_3_phase_inverter_pwm.c:50:42: error: 'IfxEgtm_ATOM0_0_TOUT0_P02_0_OUT' undeclared (first use in this function)
   50 | #define PHASE_V_HS                      &IfxEgtm_ATOM0_0_TOUT0_P02_0_OUT
      |                                          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_hjclz5se\src\egtm_atom_3_phase_inverter_pwm.c:102:41: note: in expansion of macro 'PHASE_V_HS'
  102 |     output[0].pin                     = PHASE_V_HS;  /* Channel 0 -> V phase (per requirement example) */
      |                                         ^~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_hjclz5se\src\egtm_atom_3_phase_inverter_pwm.c:50:42: note: each undeclared identifier is reported only once for each function it appears in
   50 | #define PHASE_V_HS                      &IfxEgtm_ATOM0_0_TOUT0_P02_0_OUT
      |                                          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_hjclz5se\src\egtm_atom_3_phase_inverter_pwm.c:102:41: note: in expansion of macro 'PHASE_V_HS'
  102 |     output[0].pin                     = PHASE_V_HS;  /* Channel 0 -> V phase (per requirement example) */
      |                                         ^~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_hjclz5se\src\egtm_atom_3_phase_inverter_pwm.c:51:42: error: 'IfxEgtm_ATOM0_0N_TOUT1_P02_1_OUT' undeclared (first use in this function)
   51 | #define PHASE_V_LS                      &IfxEgtm_ATOM0_0N_TOUT1_P02_1_OUT
      |                                          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_hjclz5se\src\egtm_atom_3_phase_inverter_pwm.c:103:41: note: in expansion of macro 'PHASE_V_LS'
  103 |     output[0].complementaryPin        = PHASE_V_LS;
      |                                         ^~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_hjclz5se\src\egtm_atom_3_phase_inverter_pwm.c:49:42: error: 'IfxEgtm_ATOM0_0N_TOUT7_P02_7_OUT' undeclared (first use in this function)
   49 | #define PHASE_U_LS                      &IfxEgtm_ATOM0_0N_TOUT7_P02_7_OUT
      |                                          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_hjclz5se\src\egtm_atom_3_phase_inverter_pwm.c:110:41: note: in expansion of macro 'PHASE_U_LS'
  110 |     output[1].complementaryPin        = PHASE_U_LS;
      |                                         ^~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_hjclz5se\src\egtm_atom_3_phase_inverter_pwm.c:53:42: error: 'IfxEgtm_ATOM0_0N_TOUT33_P33_11_OUT' undeclared (first use in this function)
   53 | #define PHASE_W_LS                      &IfxEgtm_ATOM0_0N_TOUT33_P33_11_OUT
      |                                          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_hjclz5se\src\egtm_atom_3_phase_inverter_pwm.c:117:41: note: in expansion of macro 'PHASE_W_LS'
  117 |     output[2].complementaryPin        = PHASE_W_LS;
      |                                         ^~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_hjclz5se\src\egtm_atom_3_phase_inverter_pwm.c:177:11: error: 'IfxEgtm_Pwm_Config' has no member named 'channelConfig'
  177 |     config.channelConfig       = &channelConfig[0];                 /* attach channel list */
      |           ^
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_hjclz5se\src\egtm_atom_3_phase_inverter_pwm.c:188:57: error: 'IFXEGTM_CMU_CLKEN_FXCLK' undeclared (first use in this function)
  188 |         IfxEgtm_Cmu_enableClocks(&MODULE_EGTM, (uint32)(IFXEGTM_CMU_CLKEN_FXCLK | IFXEGTM_CMU_CLKEN_ECLK0));
      |                                                         ^~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_hjclz5se\src\egtm_atom_3_phase_inverter_pwm.c:188:83: error: 'IFXEGTM_CMU_CLKEN_ECLK0' undeclared (first use in this function)
  188 |         IfxEgtm_Cmu_enableClocks(&MODULE_EGTM, (uint32)(IFXEGTM_CMU_CLKEN_FXCLK | IFXEGTM_CMU_CLKEN_ECLK0));
      |                                                                                   ^~~~~~~~~~~~~~~~~~~~~~~
